fixed incorrect gaps

--- a/styles.css
+++ b/styles.css
@@ -220,7 +220,7 @@ footer .web-link {
     background: transparent;
     background: var(--primary-gradient);
     border: none;
-    box-shadow: 0 0 20px rgba(7,7,7,0.1) inset;
+    box-shadow: 0 0 2px rgba(7,7,7,0.8) inset;
 }
 
 .hero-btn:hover {
@@ -435,7 +435,7 @@ footer .web-link {
     justify-content: center;
     align-items: center;
     position: relative;
-    gap: var(--spacing-md);
+    gap: var(--spacing-img);
     box-sizing: border-box;
     margin: 0 0 10% 0;
 }
@@ -455,7 +455,6 @@ footer .web-link {
 }
 
 .cta-container .cta-btn {
-    margin: 20px 0 20px 0;
     width: 95%;
     height: 80px;
     display: flex;
@@ -464,7 +463,7 @@ footer .web-link {
     background: transparent;
     border: none;
     box-shadow: 0 0 20px rgba(7,7,7,0.1) inset;
-    margin: 0 0 30px 0;
+    margin: 0 0 20px 0;
     font-weight: bolder;
     background-image: var(--alt-gradient)
 }
@@ -708,6 +707,8 @@ footer .bottom-section {
         --p-size: 18px;
         --a-size: 18px;
         --i-size: 22px;
+        --yt-height: 320px;
+
     }
 
     .hero-container .sub-headline {
@@ -728,7 +729,6 @@ footer .bottom-section {
         --brace-height: 250px;
         --preview-height: 210px;
         --cross-height: 20px;
-        --yt-height: 350px;
     }
 
     .timepieces-container .description {
@@ -780,8 +780,8 @@ footer .bottom-section {
         --a-size: 14px;
         --brace-height: 250px;
         --preview-height: 210px;
-        --cross-height: 10px;
-        --yt-height: 350px;
+        --cross-height: 15px;
+        
     }
 
     .hero-container .hero-headline {
@@ -825,6 +825,8 @@ footer .bottom-section {
         --sub-text-size: 8px;
         --p-size: 10px;
         --a-size: 8px;
+        --yt-height: 250px;
+        
     }
 
     .hero-container .hero-headline {
@@ -843,10 +845,11 @@ footer .bottom-section {
     }
 
     .hero-container .hero-btn {
-        height: 36px;
+        height: 40px;
         }
     
     .cta-container .cta-btn {
+        margin: 0 0 15px 0;
         height: 36px;
     }
 
